# float

./: CMakeLists.txt  README.md
src/: exec_add.cpp  exec_conversion.cpp  exec_div.cpp  exec_log2.cpp  exec_mul.cpp  exec_rcp.cpp  exec_rounding.cpp  fuzz.h
src/float_utils/: add.h  category.h  compare.h  conversions.h  div.h  float_parts.h  log2.h  mul.h  rcp.h  rounding.h  utils.h
